modules/network/internet_gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name      = var.igw_name
    terraform = "true"
  }
  depends_on = [
    aws_vpc.vpc
  ]
}
